# euler

./: .gitignore  006.hs  007.hs  013.hs  014.hs  019.hs  020.hs  021.hs  022.hs  024.hs  025.hs  026.hs  029.hs  032.hs  046.hs  1.hs  2.hs  3.hs  4.hs  README.md  cabal.project  hie.yaml  plan.md  projecteuler.cabal  run  utils.hs
dist-newstyle/cache/: compiler  config
src/: 001.hs  005.hs  008.hs  009.hs  010.hs  012.hs  016.hs  017.hs  018.hs  023.hs  027.hs  028.hs  033.hs  034.hs  035.hs  041.hs  042.hs  045.hs  048.hs  049.hs  EulerUtils.hs  Problem011.hs  Problem015.hs  Problem028.hs  Problem030.hs  Problem031.hs  Problem035.hs  Problem036.hs  Problem037.hs  Problem038.hs  Problem039.hs  Problem040.hs  Problem043.hs  Problem044.hs  Problem045.hs  Problem047.hs  Problem050.hs  Problem052.hs  Problem053.hs  Problem054.hs  (+5 more)
