cabal-version:   3.0
name:            projecteuler
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          allanbbs
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  EulerUtils
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: GHC2024
