cabal-version:   3.0
name:            projecteuler
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          allanbbs
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs:   src
  exposed-modules:  EulerUtils
  build-depends:    base >=4.17
  default-language: Haskell2010

executable euler-problems
  import:           warnings
  main-is:          Main.hs
  other-modules:    Problem001
  hs-source-dirs:   src
  build-depends:    base, projecteuler
  default-language: Haskell2010
